Update java-module-program.md